Modify title and contact email in index.html
Updated the title and contact email in the index.html file.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Samantha Smith | Full-Stack Developer</title>
+    <title>odongo odara </title>
     <link rel="stylesheet" href="home.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
@@ -146,7 +146,7 @@
             <div class="contact-info">
                 <div class="contact-item">
                     <i class="fas fa-envelope"></i>
-                    <p>samantha@example.com</p>
+                    <p>fredrickodara@gmail.com</p>
                 </div>
                 <div class="contact-item">
                     <i class="fas fa-phone"></i>
@@ -184,3 +184,4 @@
     <script src="home.js"></script>
 </body>
 </html>
+
