--- a/index.html
+++ b/index.html
@@ -60,10 +60,7 @@
             <div class="about-text">
                 <p class="job-title">Full-stack Web Developer</p>
                 <p class="description">
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
-                    Eligendi vitae molestias non nihil natus, accusantium 
-                    explicabo in inventore exercitationem soluta fugiat fuga 
-                    possimus repellat ut eum laboriosam quis facilis id!
+                   i was building the online voting system and other software application like backend and other things
                 </p>
                 <button class="btn-hire">Hire Me</button>
             </div>
@@ -169,7 +166,7 @@
     <!-- Footer -->
     <footer class="footer">
         <div class="footer-content">
-            <div class="logo">Samantha</div>
+            <div class="logo">odongo</div>
             <p class="footer-text">Full-stack Web Developer</p>
             <div class="social-icons">
                 <a href="#"><i class="fab fa-github"></i></a>
@@ -177,11 +174,12 @@
                 <a href="#"><i class="fab fa-twitter"></i></a>
                 <a href="#"><i class="fab fa-instagram"></i></a>
             </div>
-            <p class="copyright">© 2023 Samantha Smith. All rights reserved.</p>
+            <p class="copyright">odongo. All rights reserved.</p>
         </div>
     </footer>
 
     <script src="home.js"></script>
 </body>
 </html>
+
 
